Added docs for Glue42 3.14.