@@ -6,9 +6,17 @@ The Glue42 Java library is available as a package in the [Maven Central Reposito
 
 Glue42 Java requires JDK 8+ (Java SE 8+) and is JDK 9+ ready.
 
+For Glue42 Java to work with Java SE 17+, you must pass the following parameters to the JVM:
+
+```cmd
+--add-opens java.desktop/java.awt=ALL-UNNAMED
+--add-opens java.desktop/sun.awt.windows=ALL-UNNAMED
+--add-exports java.desktop/java.awt.peer=ALL-UNNAMED
+```
+
 ### Maven
 
-``` xml
+```xml
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -28,7 +36,7 @@ Glue42 Java requires JDK 8+ (Java SE 8+) and is JDK 9+ ready.
         <dependency>
             <groupId>com.glue42</groupId>
             <artifactId>java-glue42-shaded</artifactId>
-            <version>1.4.4</version>
+            <version>1.4.5</version>
         </dependency>
     </dependencies>
 </project>
@@ -36,14 +44,14 @@ Glue42 Java requires JDK 8+ (Java SE 8+) and is JDK 9+ ready.
 
 ### Gradle
 
-``` groovy
+```groovy
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile 'com.glue42:java-glue42-shaded:1.4.4'
+    compile 'com.glue42:java-glue42-shaded:1.4.5'
 }
 ```
 
@@ -51,12 +59,12 @@ dependencies {
 
 To use Glue42 Java in your applications, add the Glue42 Java library and its dependencies to your application classpath, import the `Glue` class and create a `Glue` instance:
 
-``` java
-import com.tick42.glue.Glue; 
+```java
+import com.tick42.glue.Glue;
 
-try (Glue glue = Glue.builder().build()) 
+try (Glue glue = Glue.builder().build())
 {
-    System.out.println(glue.version()); 
+    System.out.println(glue.version());
 }
 ```
 
@@ -81,11 +89,11 @@ Glue.builder()
         .build();
 ```
 
-## Configuration
+## Application Configuration
 
-To configure Glue42 Java in your application, you can use CONF, PROPERTIES, JSON files and system properties to externalize your configuration. For example, if you want to specify a name for your application, you can do so in a `glue.conf` file:
+To configure your Glue42 enabled Java app and add it to the [Glue42 Toolbar](../../../../glue42-concepts/glue42-toolbar/index.html), you can use CONF, PROPERTIES, JSON files and system properties to externalize your configuration. For example, if you want to specify a name for your application, you can do so in a `glue.conf` file:
 
-``` java
+```java
 glue {
     application: "My Java App"
 }
@@ -93,47 +101,49 @@ glue {
 
 Glue42 Java will look for a Glue42 configuration file in the application classpath. If you are using Maven or Gradle as a build tool, you can place the `glue.conf` file for your application in the `\src\main\resources` folder of your project directory.
 
-If you don't specify an application name in a `glue.conf` file, as in the example above, the name of the application will be taken from the [**Glue42 Enterprise**](https://glue42.com/enterprise/) starting context which contains configurations from the [application definition](#application_definition) file (see below).
+If you don't specify an application name in a `glue.conf` file, as in the example above, the name of the application will be taken from the [**Glue42 Enterprise**](https://glue42.com/enterprise/) starting context which contains application configurations from JSON files.
 
 You can also set the application name runtime when initializing the Glue42 Java library, which will override any previous configurations:
 
-``` java
+```java
 Glue.builder().withApplicationName("My Java App").build();
 ```
 
-## Application Definition
+JSON application configuration files must be placed in the `%LocalAppData%\Tick42\UserData\<ENV-REG>\apps` folder, where `<ENV-REG>` must be replaced with the environment and region of your [**Glue42 Enterprise**](https://glue42.com/enterprise/) copy (e.g., `T42-DEMO`).
 
-To add your Java application to the [**Glue42 Enterprise**](https://glue42.com/enterprise/) Application Manager, define a configuration file and add it to the application configuration store. Place this file in the `%LocalAppData%\Tick42\UserData\<ENV-REG>\apps` folder, where `<ENV-REG>` should be replaced by the environment and region of your [**Glue42 Enterprise**](https://glue42.com/enterprise/) copy (e.g., `T42-DEMO`). This way, your files won't be erased or overwritten, in case you decide to upgrade or change your [**Glue42 Enterprise**](https://glue42.com/enterprise/) version:
+The following is an example JSON configuration for a Java app:
 
 ``` json
 [
     {
         "title": "Java Example",
-        "type": "exe", 
+        "type": "exe",
         "name": "java-example",
         "icon": "https://enterprise-demos.tick42.com/resources/icons/w2.jpg",
         "details": {
-            "path": "", 
-            "command": "java", 
-            "parameters": "-jar example.jar", 
+            "path": "",
+            "command": "java",
+            "parameters": "-jar example.jar",
             "mode": "tab"
         }
     }
 ]
 ```
 
+*Note that if you want to pass parameters to the JVM - e.g., to ensure compatibility of Glue42 Java with Java SE 17+ (see [Installation](#installation)), you must pass them before the command for running the executable JAR file - e.g., before `"-jar example.jar"`.*
+
 | Property | Description |
 |----------|-------------|
-| `"type"` | Must be `exe`. |
+| `"type"` | Must be `"exe"`. |
 | `"path"` | The path to the application - relative or absolute. |
 | `"command"` | The actual command to execute (`java`). |
 | `"parameters"` | Specifies command line arguments. |
 
 *Note that the definition must be a valid JSON file (you should either use a forward slash or escape the backslash).*
 
-*To be able to start Glue42 Java on a **dual core** machine, you have to pass the `-Dglue.gateway.ws.max-pool-size=3` parameter to the JVM by adding it to the `"parameters"` property described above.*
+*To be able to start Glue42 Java on a dual core machine, you have to pass the `-Dglue.gateway.ws.max-pool-size=3` parameter to the JVM by adding it to the `"parameters"` property described above.*
 
-For more detailed information about the application definitions, see the [Configuration](../../../../developers/configuration/application/index.html#application_configuration-exe) documentation.
+*For more details, see the [Application Configuration](../../../../developers/configuration/application/index.html#application_configuration-exe) section.*
 
 ## Glue42 Java Concepts
 
@@ -146,4 +156,4 @@ Once you have created a `Glue` instance, your application has access to all Glue
 - [Interop](../../../../glue42-concepts/data-sharing-between-apps/interop/java/index.html)
 - [Window Management](../../../../glue42-concepts/windows/window-management/java/index.html)
 - [Layouts](../../../../glue42-concepts/windows/layouts/java/index.html)
-- [Notifications](../../../../glue42-concepts/notifications/java/index.html) 
+- [Notifications](../../../../glue42-concepts/notifications/java/index.html)
